--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,12 @@
-<h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
+<h1 class="mt-4"><%= user.name %></h1>
+<div>
+    <h6><i class="fas fa-coins"></i>  <%= user.gold %></h6>
+    <h6><i class="far fa-gem"></i>  <%= user.gems %></h6>
+    <h6>Lvl  <%= user.level %></h6>
+    <h6>EXP  <%= user.experience %></h6>
+</div>
+<br>
+<form action="/dashboard/spendGold" method="POST">
+    <button type="submit">Spend 1000 Gold</button>
+</form>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
