--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,3 +10,5 @@
     <button type="submit">Spend 1000 Gold</button>
 </form>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
+<a href="dashboard/champions" class="btn btn-secondary">Champions</a>
+<a href="dashboard/shop" class="btn btn-secondary">Shop</a>
