--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="loginstyle.css">
+<link rel="stylesheet" type="text/css" href="/styles/login.css">
 <% 
 if(typeof errors != 'undefined') { 
     errors.forEach(function(error) {
@@ -83,4 +83,4 @@ if(typeof errors != 'undefined') {
         </div>
     </div>    
 </div>
-<script src="login.js"></script>
+<script src="/js/login.js"></script>
