--- a/views/champions.ejs
+++ b/views/champions.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/styles/champions.css" class="css">
+
 <div class="champion-container">
     <h1>Champion Lineup</h1>
     <div class="empty">
@@ -11,13 +12,40 @@
     <div class="empty"></div>
 
     <h2>Owned Champions</h2>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Race</th>
+            <th scope="col">Class</th>
+            <th scope="col">Level</th>
+        </tr>
+        </thead>
+        <tbody>
+        <%
+        user.champions.forEach(function(champion) {
+            %>
+            <tr> 
+                <th scope="row"><%= champion.name%></th>
+                <td><%= champion.race%></td>
+                <td><%= champion.class%></td>
+                <td><%= champion.level%></td>            
+            </tr>
+            <%
+        });
+        %>      
+        
+            
+            
+        
+        </tbody>
+    </table>
 
     <h2>Unowned Champions</h2>
 </div>
 <div class="container info-container">
     <h1>Champion Information</h1>
-    <h4 class="selected-champion">Selected champion:</h4>
-    
+    <h4>Selected champion:</h4>
 </div>
 
 <script src="/js/champions.js"></script>
