--- a/styles/champions.css
+++ b/styles/champions.css
@@ -35,7 +35,7 @@ body {
     width: 38%;
     height: 100%;
     right: 0;
-    top: 0;
+    top: 20 ;
     z-index: 0;
     border: solid 1px black;
   }
@@ -44,6 +44,7 @@ body {
     width: 62%;
     height: 100%;
     left: 0;
-    top: 0;
+    top: 20;
     z-index: 1;
+    overflow: scroll;
   }
