--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,14 +1,14 @@
+
 <h1 class="mt-4"><%= user.name %></h1>
 <div>
     <h6><i class="fas fa-coins"></i>  <%= user.gold %></h6>
     <h6><i class="far fa-gem"></i>  <%= user.gems %></h6>
     <h6>Lvl  <%= user.level %></h6>
     <h6>EXP  <%= user.experience %></h6>
+    <h6><i class="fas fa-key"></i>  <%= user['gold keys'] %></h6>
 </div>
 <br>
 <form action="/dashboard/spendGold" method="POST">
-    <button type="submit">Spend 1000 Gold</button>
+    <button class="btn btn-success" type="submit">Spend 1000 Gold</button>
 </form>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
-<a href="dashboard/champions" class="btn btn-secondary">Champions</a>
-<a href="dashboard/shop" class="btn btn-secondary">Shop</a>
+
