--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,25 @@
     <title>Tower Arena</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/dashboard/champions">Champions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/dashboard/shop">Shop</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <a href="/users/logout" class="btn btn-secondary my-2 my-sm-0">Logout</a>
+          </form>
+        </div>
+    </nav>
     <div class="containter">
         <%- body %>
     </div>    
