--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,1 +1,11 @@
 <h1>Shop</h1>
+<div>
+    <h6><i class="fas fa-coins"></i>  <%= user.gold %></h6>
+    <h6><i class="far fa-gem"></i>  <%= user.gems %></h6>
+    <h6><i class="fas fa-key"></i>  <%= user['gold keys'] %></h6>
+</div>
+<br>
+<form action="/dashboard/pullChest" method="POST">
+    <button class="btn btn-success" type="submit">Pull Champion Chest 1 Gold Key</button>
+</form>
+<br>
